--- a/nsm-lib/Cargo.toml
+++ b/nsm-lib/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 [dependencies]
 aws-nitro-enclaves-nsm-api = { path = "../" }
 serde_bytes = "0.11"
+libc = "0.2"
 
 [build-dependencies]
 cbindgen = { version = "0.21", default-features = false }
